# parkingfunctions

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: requirements.txt
docs/source/: conf.py  gen.md  index.md  index.rst  start.md  usage.md  val.md
parkingfunctions/: __init__.py  generates.py  validate.py
tests/: test_parkingfunctions.py
