[tool.poetry]
name = "parkingfunctions"
version = "0.1.0"
description = ""
authors = ["Seth Bangert <seth@sbang.me>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[project.optional-dependencies]
doc = [
    "sphinx~=4.2.0",
]