[tool.poetry]
name = "parkingfunctions"
version = "0.1.1"
description = ""
authors = ["Seth Bangert <seth@sbang.me>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"
myst-parser = "^0.18.0"
sphinx-rtd-theme = "^1.0.0"
furo = "^2022.6.21"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[project.optional-dependencies]
doc = [
    "sphinx~=5.1.1",
    "myst-parser",
    "furo",
]